Fixes viewport height issues on mobile devices

--- a/style.scss
+++ b/style.scss
@@ -51,13 +51,11 @@ main {
   .password-text-container {
     @include flex(row, center, flex-start);
     width: inherit;
-    margin: 2rem;
-    margin-bottom: 0;
     position: relative;
 
     .password-text {
       appearance: none;
-      background-color: $accent-color;
+      background: $accent-color;
       color: $secondary-text-color;
       font-family: "Inter", sans-serif;
       font-weight: bold;
@@ -80,13 +78,13 @@ main {
     padding: 0.25rem 0;
   }
 
-  .action-buttons-container{
-    @include flex(row,center, center);
+  .action-buttons-container {
+    @include flex(row, center, center);
     width: 100%;
     margin: 1.5rem 0;
 
-    .action-button{
-      @include flex(row,center,center);
+    .action-button {
+      @include flex(row, center, center);
       appearance: none;
       background: transparent;
       color: white;
@@ -96,17 +94,17 @@ main {
       cursor: pointer;
       transition: all linear 0.2s;
 
-      img{
+      img {
         height: 1.25rem;
         width: 1.25rem;
-        margin-inline-end: .5rem;
+        margin-inline-end: 0.5rem;
       }
-  
+
       &:hover {
         background: $accent-color;
         color: $secondary-text-color;
       }
-  
+
       &:focus-visible {
         background: $accent-color;
         color: $secondary-text-color;
@@ -114,16 +112,13 @@ main {
     }
 
     #generateButton {
-      margin-inline-end: .5rem;
+      margin-inline-end: 0.5rem;
     }
 
     #copyButton {
-      margin-inline-start: .5rem;
+      margin-inline-start: 0.5rem;
     }
-
   }
-
-  
 }
 
 .password-settings-container {
@@ -174,7 +169,7 @@ main {
         border: none;
         border-radius: 50%;
         background: white;
-        margin-top: -.55rem;
+        margin-top: -0.55rem;
         box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.15);
         cursor: pointer;
       }
@@ -190,7 +185,7 @@ main {
         cursor: pointer;
       }
 
-      input[type="range"]::-ms-thumb{
+      input[type="range"]::-ms-thumb {
         appearance: none;
         height: 20px;
         width: 20px;
@@ -211,7 +206,7 @@ main {
         text-align: center;
         font-weight: bold;
 
-        &::after{
+        &::after {
           content: "";
           position: absolute;
           width: 0;
@@ -243,14 +238,14 @@ main {
       margin: 1rem 0;
       display: grid;
       grid-template-columns: repeat(4, 1fr);
-      gap: .5rem;
+      gap: 0.5rem;
 
       .password-filter-control {
         @include flex(row, center, space-between);
         width: inherit;
         border: 2px solid transparent;
         border-radius: 4px;
-        padding: .25rem 0;
+        padding: 0.25rem 0;
 
         &:first-of-type {
           padding-left: 0;
@@ -261,7 +256,7 @@ main {
         }
 
         &:focus-within {
-            border: 2px solid $accent-color;
+          border: 2px solid $accent-color;
         }
 
         input {
@@ -277,8 +272,8 @@ main {
           cursor: pointer;
           transition: all 0.2s;
 
-          &:focus{
-            outline:none;
+          &:focus {
+            outline: none;
           }
 
           &::before {
@@ -330,7 +325,7 @@ main {
     padding: 0.35rem 1.5rem;
   }
 
-  .password-container .action-buttons-container .action-button{
+  .password-container .action-buttons-container .action-button {
     width: 30%;
   }
 
@@ -363,7 +358,7 @@ main {
     padding: 0;
   }
 
-  .password-container .action-buttons-container .action-button{
+  .password-container .action-buttons-container .action-button {
     width: 50%;
   }
 
